--- a/01_UserInterface（前端界面）/FOPS.Blazor/Properties/launchSettings.json
+++ b/01_UserInterface（前端界面）/FOPS.Blazor/Properties/launchSettings.json
@@ -3,8 +3,8 @@
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:37487",
-      "sslPort": 44353
+      "applicationUrl": "http://localhost:42747",
+      "sslPort": 44392
     }
   },
   "profiles": {
@@ -15,7 +15,7 @@
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
     },
-    "FOPS": {
+    "FOPS.Blazor": {
       "commandName": "Project",
       "dotnetRunMessages": "true",
       "launchBrowser": true,
