--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@
 /01_UserInterface（前端界面）/FOPS.Blazor/obj
 /03_Abstract（组件接口）/FOPS.Abstract/bin
 /03_Abstract（组件接口）/FOPS.Abstract/obj
+/05_Infrastructure（基础设施）/FOPS.Infrastructure.Common/obj
