完成任务组列表

--- a/01_UserInterface（前端界面）/FOPS.Blazor/appsettings.json
+++ b/01_UserInterface（前端界面）/FOPS.Blazor/appsettings.json
@@ -1,4 +1,31 @@
 {
+  "Redis": [
+    {
+      "Name": "fss_redis",
+      "Server": "192.168.8.8:6379,connecttimeout=600000,synctimeout=10000,responsetimeout=10000",
+      "CommandType": 0,
+      "Password": "123456"
+    }
+  ],
+  "Database": {
+    "IsWriteSqlErrorLog": true,
+    "IsWriteSqlRunLog": false,
+    "Items": [
+      {
+        "Name": "fss_db",
+        "Server": "192.168.8.8",
+        "UserID": "root",
+        "PassWord": "steden@123",
+        "Port": "3306",
+        "DataType": "MySql",
+        "Catalog": "fss",
+        "ConnectTimeout": 600,
+        "CommandTimeout": 300,
+        "PoolMaxSize": 50,
+        "PoolMinSize": 1
+      }
+    ]
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
