--- a/03_Abstract（组件接口）/FOPS.Abstract/FOPS.Abstract.csproj
+++ b/03_Abstract（组件接口）/FOPS.Abstract/FOPS.Abstract.csproj
@@ -12,9 +12,9 @@
     </ItemGroup>
 
     <ItemGroup>
-      <Folder Include="Entity" />
-      <Folder Include="Enum" />
-      <Folder Include="Server" />
+      <Folder Include="Tmp\Entity" />
+      <Folder Include="Tmp\Enum" />
+      <Folder Include="Tmp\Server" />
     </ItemGroup>
 
 </Project>
