--- a/01_UserInterface（前端界面）/FOPS.Blazor/FOPS.Blazor.csproj
+++ b/01_UserInterface（前端界面）/FOPS.Blazor/FOPS.Blazor.csproj
@@ -20,4 +20,15 @@
       <_ContentIncludedByDefault Remove="wwwroot\css\site.css" />
     </ItemGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\..\..\Farseer.Net\Framework\Farseer.Net.Cache.Redis\Farseer.Net.Cache.Redis.csproj" />
+      <ProjectReference Include="..\..\..\Farseer.Net\Framework\Farseer.Net.Core\Farseer.Net.Core.csproj" />
+      <ProjectReference Include="..\..\..\Farseer.Net\Framework\Farseer.Net.Data\Farseer.Net.Data.csproj" />
+      <ProjectReference Include="..\..\..\Farseer.Net\Framework\Farseer.Net.ElasticSearch\Farseer.Net.ElasticSearch.csproj" />
+      <ProjectReference Include="..\..\..\Farseer.Net\Framework\Farseer.Net.Mapper\Farseer.Net.Mapper.csproj" />
+      <ProjectReference Include="..\..\..\Farseer.Net\Framework\Farseer.Net.MQ.RedisStream\Farseer.Net.MQ.RedisStream.csproj" />
+      <ProjectReference Include="..\..\..\Farseer.Net\Framework\Farseer.Net\Farseer.Net.csproj" />
+      <ProjectReference Include="..\..\04_Component（业务组件）\FOPS.Com.FssServer\FOPS.Com.FssServer.csproj" />
+    </ItemGroup>
+
 </Project>
