--- a/01_UserInterface（前端界面）/FOPS.Blazor/k8s.yaml
+++ b/01_UserInterface（前端界面）/FOPS.Blazor/k8s.yaml
@@ -24,7 +24,7 @@ spec:
         app: fops
     spec:
       nodeSelector:   #节点筛选器
-        rt: middleware
+        rt: web
       containers:
         - name: fops
           image: farseernet/fss:latest
