--- a/01_UserInterface（前端界面）/FOPS.Blazor/k8s.yaml
+++ b/01_UserInterface（前端界面）/FOPS.Blazor/k8s.yaml
@@ -27,7 +27,7 @@ spec:
         rt: web
       containers:
         - name: fops
-          image: farseernet/fss:latest
+          image: farseernet/fops:latest
           imagePullPolicy: IfNotPresent
           imagePullSecrets:
             - name: regsecret
