--- a/01_UserInterface（前端界面）/FOPS.Blazor/appsettings.json
+++ b/01_UserInterface（前端界面）/FOPS.Blazor/appsettings.json
@@ -12,6 +12,19 @@
     "IsWriteSqlRunLog": false,
     "Items": [
       {
+        "Name": "fops",
+        "Server": "192.168.8.8",
+        "UserID": "root",
+        "PassWord": "steden@123",
+        "Port": "3306",
+        "DataType": "MySql",
+        "Catalog": "fops",
+        "ConnectTimeout": 600,
+        "CommandTimeout": 300,
+        "PoolMaxSize": 50,
+        "PoolMinSize": 1
+      },
+      {
         "Name": "fss_db",
         "Server": "192.168.8.8",
         "UserID": "root",
