--- a/01_UserInterface（前端界面）/FOPS.Blazor/FOPS.Blazor.csproj
+++ b/01_UserInterface（前端界面）/FOPS.Blazor/FOPS.Blazor.csproj
@@ -29,6 +29,8 @@
       <ProjectReference Include="..\..\..\Farseer.Net\Framework\Farseer.Net.MQ.RedisStream\Farseer.Net.MQ.RedisStream.csproj" />
       <ProjectReference Include="..\..\..\Farseer.Net\Framework\Farseer.Net\Farseer.Net.csproj" />
       <ProjectReference Include="..\..\04_Component（业务组件）\FOPS.Com.FssServer\FOPS.Com.FssServer.csproj" />
+      <ProjectReference Include="..\..\04_Component（业务组件）\FOPS.Com.K8SServer\FOPS.Com.K8SServer.csproj" />
+      <ProjectReference Include="..\..\04_Component（业务组件）\FOPS.Com.MetaInfoServer\FOPS.Com.MetaInfoServer.csproj" />
     </ItemGroup>
 
     <ItemGroup>
