--- a/04_Component（业务组件）/FOPS.Com.K8SServer/FOPS.Com.K8SServer.csproj
+++ b/04_Component（业务组件）/FOPS.Com.K8SServer/FOPS.Com.K8SServer.csproj
@@ -14,6 +14,7 @@
         <ProjectReference Include="..\..\..\Farseer.Net\Framework\Farseer.Net.Utils\Farseer.Net.Utils.csproj" />
         <ProjectReference Include="..\..\03_Abstract（组件接口）\FOPS.Abstract\FOPS.Abstract.csproj" />
         <ProjectReference Include="..\..\..\Farseer.Net\Framework\Farseer.Net.ElasticSearch\Farseer.Net.ElasticSearch.csproj" />
+        <ProjectReference Include="..\..\05_Infrastructure（基础设施）\FOPS.Infrastructure.Common\FOPS.Infrastructure.Common.csproj" />
     </ItemGroup>
 
     <ItemGroup>
