--- a/05_Infrastructure（基础设施）/FOPS.Infrastructure.Common/FOPS.Infrastructure.Common.csproj
+++ b/05_Infrastructure（基础设施）/FOPS.Infrastructure.Common/FOPS.Infrastructure.Common.csproj
@@ -11,6 +11,7 @@
 
     <ItemGroup>
       <ProjectReference Include="..\..\..\Farseer.Net\Framework\Farseer.Net.Core\Farseer.Net.Core.csproj" />
+      <ProjectReference Include="..\..\03_Abstract（组件接口）\FOPS.Abstract\FOPS.Abstract.csproj" />
     </ItemGroup>
 
 </Project>
