--- a/04_Component（业务组件）/FOPS.Com.BuilderServer/FOPS.Com.BuilderServer.csproj
+++ b/04_Component（业务组件）/FOPS.Com.BuilderServer/FOPS.Com.BuilderServer.csproj
@@ -15,4 +15,9 @@
         <ProjectReference Include="..\..\..\Farseer.Net\Framework\Farseer.Net.ElasticSearch\Farseer.Net.ElasticSearch.csproj" />
         <ProjectReference Include="..\..\05_Infrastructure（基础设施）\FOPS.Infrastructure.Common\FOPS.Infrastructure.Common.csproj" />
     </ItemGroup>
+
+    <ItemGroup>
+      <Folder Include="Docker" />
+      <Folder Include="Kubectl" />
+    </ItemGroup>
 </Project>
