添加镜像模板、镜像仓库

--- a/03_Abstract（组件接口）/FOPS.Abstract/FOPS.Abstract.csproj
+++ b/03_Abstract（组件接口）/FOPS.Abstract/FOPS.Abstract.csproj
@@ -12,6 +12,7 @@
     </ItemGroup>
 
     <ItemGroup>
+      <Folder Include="Docker\Enum" />
       <Folder Include="Tmp\Entity" />
       <Folder Include="Tmp\Enum" />
       <Folder Include="Tmp\Server" />
