Shll工具移到Farseer.Net框架中

--- a/03_Abstract（组件接口）/FOPS.Abstract/FOPS.Abstract.csproj
+++ b/03_Abstract（组件接口）/FOPS.Abstract/FOPS.Abstract.csproj
@@ -6,6 +6,7 @@
 
     <ItemGroup>
         <ProjectReference Include="..\..\..\Farseer.Net\Framework\Farseer.Net.Cache\Farseer.Net.Cache.csproj" />
+        <ProjectReference Include="..\..\..\Farseer.Net\Framework\Farseer.Net.Core\Farseer.Net.Core.csproj" />
         <ProjectReference Include="..\..\..\Farseer.Net\Framework\Farseer.Net\Farseer.Net.csproj" />
         <PackageReference Include="Grpc.Core.Api" Version="2.37.1" />
       <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="5.0.0" />
