--- a/01_UserInterface（前端界面）/FOPS.Blazor/Properties/launchSettings.json
+++ b/01_UserInterface（前端界面）/FOPS.Blazor/Properties/launchSettings.json
@@ -1,17 +1,10 @@
 {
   "profiles": {
-    "IIS Express": {
-      "commandName": "IISExpress",
-      "launchBrowser": true,
-      "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
-      }
-    },
     "FOPS.Blazor": {
       "commandName": "Project",
       "dotnetRunMessages": "true",
       "launchBrowser": true,
-      "applicationUrl": "https://*:80;http://*:80",
+      "applicationUrl": "https://localhost;http://localhost",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
