文档添加K8S脚本

--- a/01_UserInterface（前端界面）/FOPS.Blazor/k8s.yaml
+++ b/01_UserInterface（前端界面）/FOPS.Blazor/k8s.yaml
@@ -101,7 +101,7 @@ metadata:
   name: fops
 spec:
   rules:
-    - host: fops.xxxxxxx # 内网则可以直接使用Service
+    - host: fops.xxxxxxx # 访问的域名
       http:
         paths:
           - path: /
