更新镜像版本

--- a/01_UserInterface（前端界面）/FOPS.Blazor/Dockerfile
+++ b/01_UserInterface（前端界面）/FOPS.Blazor/Dockerfile
@@ -1,5 +1,5 @@
 ﻿# 添加基础镜像
-FROM farseernet/dotnet:sdk5.0_kubectl_docker_npm6.14.13
+FROM farseernet/dotnet:sdk5.0_kubectl_npm6.14.13_tools.1
 WORKDIR /app
 COPY . ./
 
