添加链路监控模块

--- a/01_UserInterface（前端界面）/FOPS.Blazor/appsettings.json
+++ b/01_UserInterface（前端界面）/FOPS.Blazor/appsettings.json
@@ -39,6 +39,12 @@
       }
     ]
   },
+  "ElasticSearch": [
+    {
+      "Name": "LinkTrack",
+      "Server": "http://127.0.0.1:9200"
+    }
+  ],
   "Logging": {
     "LogLevel": {
       "Default": "Information",
