--- a/01_UserInterface（前端界面）/FOPS.Blazor/FOPS.Blazor.csproj
+++ b/01_UserInterface（前端界面）/FOPS.Blazor/FOPS.Blazor.csproj
@@ -24,6 +24,7 @@
     </ItemGroup>
 
     <ItemGroup>
+      <ProjectReference Include="..\..\..\Farseer.Net\Framework\Farseer.Net.AspNetCore\Farseer.Net.AspNetCore.csproj" />
       <ProjectReference Include="..\..\..\Farseer.Net\Framework\Farseer.Net.Cache.Redis\Farseer.Net.Cache.Redis.csproj" />
       <ProjectReference Include="..\..\..\Farseer.Net\Framework\Farseer.Net.Core\Farseer.Net.Core.csproj" />
       <ProjectReference Include="..\..\..\Farseer.Net\Framework\Farseer.Net.Data\Farseer.Net.Data.csproj" />
@@ -40,13 +41,13 @@
     </ItemGroup>
 
     <ItemGroup>
-      <PackageReference Include="MySql.Data" Version="8.0.25" />
-    </ItemGroup>
-
-    <ItemGroup>
       <None Update="Dockerfile">
         <CopyToOutputDirectory>Always</CopyToOutputDirectory>
       </None>
+    </ItemGroup>
+
+    <ItemGroup>
+      <PackageReference Include="MySqlConnector" Version="1.3.11" />
     </ItemGroup>
 
 </Project>
