优化链路追踪展示

--- a/01_UserInterface（前端界面）/FOPS.Blazor/appsettings.json
+++ b/01_UserInterface（前端界面）/FOPS.Blazor/appsettings.json
@@ -42,7 +42,9 @@
   "ElasticSearch": [
     {
       "Name": "LinkTrack",
-      "Server": "http://127.0.0.1:9200"
+      "Server": "http://127.0.0.1:9200",
+      "Username": "aaaaaaaaa",
+      "Password": "bbbbbbbbb"
     }
   ],
   "Logging": {
