1、升级基础镜像 2、允许项目不设置Git

--- a/01_UserInterface（前端界面）/FOPS.Blazor/appsettings.json
+++ b/01_UserInterface（前端界面）/FOPS.Blazor/appsettings.json
@@ -43,8 +43,8 @@
     {
       "Name": "LinkTrack",
       "Server": "http://192.168.1.8:9200",
-      "Username": "aaaaaaaaa",
-      "Password": "bbbbbbbbb"
+      "Username": "",
+      "Password": ""
     }
   ],
   "Logging": {
