--- a/01_UserInterface（前端界面）/FOPS.Blazor/FOPS.Blazor.csproj
+++ b/01_UserInterface（前端界面）/FOPS.Blazor/FOPS.Blazor.csproj
@@ -21,6 +21,7 @@
       <_ContentIncludedByDefault Remove="Pages\k8s\cluster\Add.razor" />
       <_ContentIncludedByDefault Remove="Pages\k8s\cluster\List.razor" />
       <_ContentIncludedByDefault Remove="Pages\k8s\cluster\Update.razor" />
+      <_ContentIncludedByDefault Remove="Pages\fss\node\List.razor" />
     </ItemGroup>
 
     <ItemGroup>
