--- a/01_UserInterface（前端界面）/FOPS.Blazor/appsettings.json
+++ b/01_UserInterface（前端界面）/FOPS.Blazor/appsettings.json
@@ -2,7 +2,7 @@
   "Redis": [
     {
       "Name": "fss_redis",
-      "Server": "192.168.1.8:6379,connecttimeout=600000,synctimeout=10000,responsetimeout=10000",
+      "Server": "192.168.1.8:6379,dbIndex=13,connecttimeout=600000,synctimeout=10000,responsetimeout=10000",
       "CommandType": 0,
       "Password": "123456"
     }
