在构建日志中，重新构建时，需要重新初始化变量

--- a/01_UserInterface（前端界面）/FOPS.Blazor/appsettings.json
+++ b/01_UserInterface（前端界面）/FOPS.Blazor/appsettings.json
@@ -39,10 +39,18 @@
       }
     ]
   },
+  "FSS": {
+  "ReservedTaskCount": 20,    // 清除历史任务数时，最少保留的成功数量
+  "ElasticIndexFormat": "yyyy_MM"    // ES索引日期格式化
+  },
   "ElasticSearch": [
     {
+      "Name": "es",
+      "Server": "https://es.abtest.ws"      // ES地址,设置后，则使用ES作为日志存储
+    },
+    {
       "Name": "LinkTrack",
-      "Server": "http://192.168.1.8:9200",
+      "Server": "https://es.abtest.ws",
       "Username": "",
       "Password": ""
     }
