--- a/05_Infrastructure（基础设施）/FOPS.Infrastructure.Repository/FOPS.Infrastructure.Repository.csproj
+++ b/05_Infrastructure（基础设施）/FOPS.Infrastructure.Repository/FOPS.Infrastructure.Repository.csproj
@@ -8,5 +8,6 @@
     <ItemGroup>
         <ProjectReference Include="..\..\..\Farseer.Net\Framework\Farseer.Net.Cache.Redis\Farseer.Net.Cache.Redis.csproj" />
         <ProjectReference Include="..\..\..\Farseer.Net\Framework\Farseer.Net\Farseer.Net.csproj" />
+        <ProjectReference Include="..\..\03_Abstract（组件接口）\FOPS.Abstract\FOPS.Abstract.csproj" />
     </ItemGroup>
 </Project>
