增加数据库慢查询

--- a/01_UserInterface（前端界面）/FOPS.Blazor/FOPS.Blazor.csproj
+++ b/01_UserInterface（前端界面）/FOPS.Blazor/FOPS.Blazor.csproj
@@ -51,4 +51,12 @@
       <PackageReference Include="MySqlConnector" Version="1.3.11" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="Pages\link_track\es" />
+      <Folder Include="Pages\link_track\grpc" />
+      <Folder Include="Pages\link_track\http" />
+      <Folder Include="Pages\link_track\mq" />
+      <Folder Include="Pages\link_track\redis" />
+    </ItemGroup>
+
 </Project>
