--- a/01_UserInterface（前端界面）/FOPS.Blazor/Properties/launchSettings.json
+++ b/01_UserInterface（前端界面）/FOPS.Blazor/Properties/launchSettings.json
@@ -4,6 +4,8 @@
       "commandName": "Project",
       "dotnetRunMessages": "true",
       "launchBrowser": true,
+      "launchUrl": "",
+      "applicationUrl": "http://localhost:88",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
