完成获取FSS的重构，直连数据库改为走API的方式获取数据

--- a/01_UserInterface（前端界面）/FOPS.Blazor/appsettings.json
+++ b/01_UserInterface（前端界面）/FOPS.Blazor/appsettings.json
@@ -1,19 +1,11 @@
 {
-  "Redis": [
-    {
-      "Name": "fss_redis",
-      "Server": "192.168.1.8:6379,dbIndex=13,connecttimeout=600000,synctimeout=10000,responsetimeout=10000",
-      "CommandType": 0,
-      "Password": "123456"
-    }
-  ],
   "Database": {
     "IsWriteSqlErrorLog": true,
     "IsWriteSqlRunLog": false,
     "Items": [
       {
         "Name": "fops",
-        "Server": "192.168.1.8",
+        "Server": "127.0.0.1",
         "UserID": "root",
         "PassWord": "steden@123",
         "Port": "3306",
@@ -23,36 +15,22 @@
         "CommandTimeout": 300,
         "PoolMaxSize": 50,
         "PoolMinSize": 1
-      },
-      {
-        "Name": "fss_db",
-        "Server": "192.168.1.8",
-        "UserID": "root",
-        "PassWord": "steden@123",
-        "Port": "3306",
-        "DataType": "MySql",
-        "Catalog": "fss",
-        "ConnectTimeout": 600,
-        "CommandTimeout": 300,
-        "PoolMaxSize": 50,
-        "PoolMinSize": 1
       }
     ]
   },
   "FSS": {
-  "ReservedTaskCount": 20,    // 清除历史任务数时，最少保留的成功数量
-  "ElasticIndexFormat": "yyyy_MM"    // ES索引日期格式化
+    "Server": [
+      {
+        "Name": "本地",
+        "Url": "http://127.0.0.1:888"
+      }
+    ]
   },
   "ElasticSearch": [
     {
-      "Name": "es",
-      "Server": "https://es.abtest.ws"      // ES地址,设置后，则使用ES作为日志存储
-    },
-    {
       "Name": "LinkTrack",
-      "Server": "https://es.abtest.ws",
-      "Username": "",
-      "Password": ""
+      //"Server": "https://es.abtest.ws"
+      "Server": "http://127.0.0.1:9200"
     }
   ],
   "Logging": {
