--- a/01_UserInterface（前端界面）/FOPS.Blazor/FOPS.Blazor.csproj
+++ b/01_UserInterface（前端界面）/FOPS.Blazor/FOPS.Blazor.csproj
@@ -48,6 +48,7 @@
     </ItemGroup>
 
     <ItemGroup>
+      <PackageReference Include="Blazored.LocalStorage" Version="4.1.5" />
       <PackageReference Include="MySqlConnector" Version="1.3.11" />
     </ItemGroup>
 
