修改配置格式

--- a/01_UserInterface（前端界面）/FOPS.Blazor/appsettings.json
+++ b/01_UserInterface（前端界面）/FOPS.Blazor/appsettings.json
@@ -1,38 +1,13 @@
 {
   "Database": {
-    "IsWriteSqlErrorLog": true,
-    "IsWriteSqlRunLog": false,
-    "Items": [
-      {
-        "Name": "fops",
-        "Server": "127.0.0.1",
-        "UserID": "root",
-        "PassWord": "steden@123",
-        "Port": "3306",
-        "DataType": "MySql",
-        "Catalog": "fops",
-        "ConnectTimeout": 600,
-        "CommandTimeout": 300,
-        "PoolMaxSize": 50,
-        "PoolMinSize": 1
-      }
-    ]
+    "fops": "DataType=MySql,Server=mysql:3306,UserID=root,PassWord=steden@123,Catalog=fops,PoolMaxSize=50,PoolMinSize=1"
   },
   "FSS": {
-    "Server": [
-      {
-        "Name": "本地",
-        "Url": "http://127.0.0.1:888"
-      }
-    ]
+    "本地": "http://fss:888"
   },
-  "ElasticSearch": [
-    {
-      "Name": "LinkTrack",
-      //"Server": "https://es.abtest.ws"
-      "Server": "http://127.0.0.1:9200"
-    }
-  ],
+  "ElasticSearch": {
+    "LinkTrack": "Server=http://es:9200,Username=es,Password=123456"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
