升级链路追踪的UI，区分：webapi、fssJob、Consumer（记录消息）、后台服务。

--- a/01_UserInterface（前端界面）/FOPS.Blazor/Properties/launchSettings.json
+++ b/01_UserInterface（前端界面）/FOPS.Blazor/Properties/launchSettings.json
@@ -3,7 +3,7 @@
     "FOPS.Blazor": {
       "commandName": "Project",
       "dotnetRunMessages": "true",
-      "launchBrowser": true,
+      "launchBrowser": false,
       "launchUrl": "",
       "applicationUrl": "http://localhost:88",
       "environmentVariables": {
