--- a/05_Infrastructure（基础设施）/FOPS.Infrastructure.Common/FOPS.Infrastructure.Common.csproj
+++ b/05_Infrastructure（基础设施）/FOPS.Infrastructure.Common/FOPS.Infrastructure.Common.csproj
@@ -1,12 +1,12 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-        <TargetFramework>netstandard2.1</TargetFramework>
+        <TargetFramework>net6.0</TargetFramework>
     </PropertyGroup>
 
     <ItemGroup>
-      <PackageReference Include="Google.Protobuf" Version="3.15.8" />
-      <PackageReference Include="Grpc" Version="2.37.0" />
+      <PackageReference Include="Google.Protobuf" Version="3.19.1" />
+      <PackageReference Include="Grpc" Version="2.42.0" />
     </ItemGroup>
 
     <ItemGroup>
