--- a/01_UserInterface（前端界面）/FOPS.Blazor/FOPS.Blazor.csproj
+++ b/01_UserInterface（前端界面）/FOPS.Blazor/FOPS.Blazor.csproj
@@ -3,6 +3,7 @@
     <PropertyGroup>
         <TargetFramework>net6.0</TargetFramework>
         <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
+        <ServerGarbageCollection>false</ServerGarbageCollection>
     </PropertyGroup>
 
     <ItemGroup>
