--- a/01_UserInterface（前端界面）/FOPS.Blazor/FOPS.Blazor.csproj
+++ b/01_UserInterface（前端界面）/FOPS.Blazor/FOPS.Blazor.csproj
@@ -53,4 +53,8 @@
       <PackageReference Include="MySqlConnector" Version="2.1.2" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="Pages\log\history" />
+    </ItemGroup>
+
 </Project>
