--- a/01_UserInterface（前端界面）/FOPS.Blazor/appsettings.json
+++ b/01_UserInterface（前端界面）/FOPS.Blazor/appsettings.json
@@ -1,6 +1,7 @@
 {
   "Database": {
-    "fops": "DataType=MySql,Server=mysql:3306,UserID=root,PassWord=steden@123,Catalog=fops,PoolMaxSize=50,PoolMinSize=1"
+    "fops": "DataType=MySql,Server=mysql:3306,UserID=root,PassWord=steden@123,Catalog=fops,PoolMaxSize=50,PoolMinSize=1",
+    "log_es": "Server=http://es:9200,Username=es,Password=123456,ReplicasCount=1,ShardsCount=1,RefreshInterval=5,IndexFormat=yyyy_MM"
   },
   "FSS": {
     "本地": "http://fss:888"
