完成管理员的ddd改造

--- a/04_Infrastructure/FOPS.Infrastructure/FOPS.Infrastructure.csproj
+++ b/04_Infrastructure/FOPS.Infrastructure/FOPS.Infrastructure.csproj
@@ -17,4 +17,8 @@
       <ProjectReference Include="..\..\03_Domain\FOPS.Domain.Sys\FOPS.Domain.Sys.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <PackageReference Include="Mapster" Version="7.3.0" />
+    </ItemGroup>
+
 </Project>
