--- a/03_Domain/FOPS.Domain.Sys/FOPS.Domain.Sys.csproj
+++ b/03_Domain/FOPS.Domain.Sys/FOPS.Domain.Sys.csproj
@@ -7,6 +7,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <ProjectReference Include="..\..\..\Farseer.Net\Framework\Farseer.Net.Utils\Farseer.Net.Utils.csproj" />
         <ProjectReference Include="..\..\..\Farseer.Net\Framework\Farseer.Net\Farseer.Net.csproj" />
     </ItemGroup>
 
