--- a/04_Infrastructure/FOPS.Abstract/FOPS.Abstract.csproj
+++ b/04_Infrastructure/FOPS.Abstract/FOPS.Abstract.csproj
@@ -17,6 +17,7 @@
     </ItemGroup>
 
     <ItemGroup>
+      <Folder Include="Builder\Entity" />
       <Folder Include="Builder\Enum" />
     </ItemGroup>
 
