移除非ddd架构

--- a/04_Infrastructure/FOPS.Abstract/FOPS.Abstract.csproj
+++ b/04_Infrastructure/FOPS.Abstract/FOPS.Abstract.csproj
@@ -17,8 +17,15 @@
     </ItemGroup>
 
     <ItemGroup>
-      <Folder Include="Builder\Entity" />
-      <Folder Include="Builder\Enum" />
+      <Compile Remove="Builder\**" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <EmbeddedResource Remove="Builder\**" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <None Remove="Builder\**" />
     </ItemGroup>
 
 </Project>
