--- a/04_Infrastructure/FOPS.Infrastructure/FOPS.Infrastructure.csproj
+++ b/04_Infrastructure/FOPS.Infrastructure/FOPS.Infrastructure.csproj
@@ -13,6 +13,7 @@
       <ProjectReference Include="..\..\..\Farseer.Net\Framework\Farseer.Net.ElasticSearch\Farseer.Net.ElasticSearch.csproj" />
       <ProjectReference Include="..\..\..\Farseer.Net\Framework\Farseer.Net.Mapper\Farseer.Net.Mapper.csproj" />
       <ProjectReference Include="..\..\..\Farseer.Net\Framework\Farseer.Net.MQ.RedisStream\Farseer.Net.MQ.RedisStream.csproj" />
+      <ProjectReference Include="..\..\02_Application\FOPS.Application\FOPS.Application.csproj" />
       <ProjectReference Include="..\..\03_Domain\FOPS.Domain.Build\FOPS.Domain.Build.csproj" />
       <ProjectReference Include="..\..\03_Domain\FOPS.Domain.Sys\FOPS.Domain.Sys.csproj" />
     </ItemGroup>
