完成构建日志的语法高亮实现

--- a/01_Interfaces/FOPS.Blazor/appsettings.json
+++ b/01_Interfaces/FOPS.Blazor/appsettings.json
@@ -1,13 +1,13 @@
 {
   "Database": {
-    "fops": "DataType=MySql,Server=mysql:3306,UserID=root,PassWord=steden@123,Catalog=fops,PoolMaxSize=50,PoolMinSize=1",
-    "log_es": "Server=http://es:9200,Username=es,Password=123456,ReplicasCount=1,ShardsCount=1,RefreshInterval=5,IndexFormat=yyyy_MM"
+    "fops": "DataType=MySql,Server=mysql:3306,UserID=root,PassWord=steden@123,Catalog=fops,PoolMaxSize=50,PoolMinSize=1"
   },
   "FSS": {
     "本地": "http://fss:888"
   },
   "ElasticSearch": {
-    "LinkTrack": "Server=http://es:9200,Username=es,Password=123456"
+    "LinkTrack": "Server=http://es:9200,Username=es,Password=123456",
+    "log_es": "Server=http://es:9200,Username=es,Password=123456,ReplicasCount=1,ShardsCount=1,RefreshInterval=5,IndexFormat=yyyy_MM"
   },
   "Logging": {
     "LogLevel": {
